--- a/lib/turf/turfkit.css
+++ b/lib/turf/turfkit.css
@@ -1,9 +1,92 @@
-.infowindow-content .title {
-	font-weight: bold;
-	font-size: 1.2em;
-	display: block;
+html,body {
+  font: 12px/normal "Helvetica Neue", Arial, Helvetica, sans-serif;
+  line-height: normal;
+  color: #555;
+  background: #292929;
+  position: relative;
+  padding: 0;
+  margin: 0;
+}
+
+
+a { color: #4daed8; }
+b { font-weight: bold; }
+
+div#container {
+  width: 900px;
+  padding: 40px 50px;
+  margin: 60px auto 30px;  
+  background: #fff;
+  border-radius: 1px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
+}
+
+a#logo {
+  display: block;
+  font-family: 'PT Sans', "Helvetica Neue", Arial, Helvetica, sans-serif;
+  font-size: 38px;    
+  text-decoration: none;
+  margin-bottom: 10px;
+}
+
+a#logo b { margin-right: 1px; }
+
+div#map {
+  width: 100%;
+  height: 500px;
+  border: 1px solid rgba(0,0,0,0.1);
+}
+
+div#filters {
+  margin: 20px 0;
+  padding: 10px;
+  background: #f0f0f0;
+  border: 1px solid rgba(0,0,0,0.1);
+}
+
+div#filters label {
+  font-weight: bold;
+  margin-right: 5px;
+}
+
+div#filters select {
+  margin-right: 15px;
+}
+
+
+table {
+  display: block;
+  display: table;
+  width: 100%;
+  border-collapse: collapse;  
+  border-spacing: 0;
 }
 
 table td,
 table th { padding: 5px; }
-table thead td { font-weight: bold; }	
+table thead td { 
+  font-weight: bold; 
+  font-size: 14px;
+  border-bottom: 1px solid #DDD;
+}
+
+table tr:hover td {
+  color: #000;
+  background: #F0F0F0;
+  cursor: pointer;
+}
+
+div.infowindow .title h1 {
+  font-size: 18px;
+  padding: 0;
+  margin: 0 0 7px;
+}
+
+div.infowindow .body p {
+  padding: 0;
+  margin: 0;
+}
+
+div#footer {
+  text-align: center;
+}
