--- a/lib/turf/turfkit.css
+++ b/lib/turf/turfkit.css
@@ -73,7 +73,9 @@ header a#logo span { margin-right: 1px; }
 #container {
   background: #F0F0F0;
   border-top: 1px solid #FFF;
+  border-bottom: 1px solid #DDD;
 }
+
 
 div#map {
   width: 100%;
