--- a/turfkit.css
+++ b/turfkit.css
@@ -73,6 +73,7 @@ header a#logo span { margin-right: 1px; }
 #container {
   background: #F0F0F0;
   border-top: 1px solid #FFF;
+  border-bottom: 1px solid #DDD;  
 }
 
 div#map {
